k8s/policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root Execution
    policies.kyverno.io/category: Pod Security Standards
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-non-root
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [django]
      validate:
        message: "Containers must run as a non-root user (runAsNonRoot: true)."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
